--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -7,12 +7,78 @@ html {
   background: linear-gradient(#343A3F, #181A1D);
   width: 100%;
   height: 100%;
-  color: white;
+  color: #b8b8b8;
   font-family: Arial, Helvetica, sans-serif;
-  box-sizing: border-box;
+}
+
+.text {
+  color: #b8b8b8;
 }
 
 #registerForm,
 #loginForm {
   display: none;
+}
+
+#inputContainer {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+}
+
+#loginContainer {
+  position: absolute;
+  text-align: center;
+  bottom: 0;
+  width: 100%;
+  height: 89%;
+}
+
+.grid-login {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  display: grid;
+  justify-content: center;
+  grid-template-columns: 80%;
+  grid-gap: 15px;
+}
+
+input {
+  height: 60px;
+  background: linear-gradient(#2C3135, #24272B);
+  border: none;
+  border-radius: 12px;
+  color: #b8b8b8;
+  font-size: 17px;
+  padding-left: 20px;
+  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
+}
+
+input:focus {
+  outline: none;
+}
+
+.btn-border {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 40px;
+  height: 60px;
+  width: 100%;
+  border-radius: 14px;
+  background: linear-gradient(135deg, #3400A4, #B525E8);
+}
+
+button {
+  height: 56px;
+  width: 99%;
+  background: #1E2124;
+  border: none;
+  border-radius: 12px;
+  font-size: 22px;
+  color: #7402CE;
+}
+
+#hideLogin {
+  color: #7402CE;
 }
