--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -3,15 +3,15 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: 'Lato', sans-serif;
+  font-weight: 600;
 }
 
 html {
   background: linear-gradient(#343A3F, #181A1D);
   width: 100%;
   height: 100%;
-  color: #b8b8b8;
-  font-family: 'Lato', sans-serif;
-  font-weight: 600;
+  color: #A7A9AA;
 }
 
 .text {
@@ -58,12 +58,13 @@ html {
 
 input {
   height: 60px;
-  background: linear-gradient(#2C3135, #24272B);
+  background: transparent;
   border: none;
   border-radius: 12px;
-  color: #b8b8b8;
+  color: #A7A9AA;
   font-size: 17px;
-  padding-left: 20px;
+  padding: 20px;
+  box-sizing: border-box;
   box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
 }
 
@@ -96,7 +97,7 @@ button {
 
 button:hover {
   background: transparent;
-  color: #b8b8b8;
+  color: #A7A9AA;
   transition: .3s ease-in-out;
 }
 
@@ -116,4 +117,10 @@ button:hover {
   position: relative;
   margin-top: -30px;
   margin-bottom: 10px;
+}
+
+@media only screen and (min-width: 480px) {
+  .grid-login {
+    grid-template-columns: 400px;
+  }
 }
